Fix overflow complaint in Firefox

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html
+{
+	width: 100%;
+}
+
 body
 {
 	color: #363833;
